Closed
Bug 463863
Opened 17 years ago
Closed 17 years ago
Download history not shown in Places history
Categories
(Firefox :: Bookmarks & History, defect, P2)
Firefox
Bookmarks & History
Tracking
()
VERIFIED
FIXED
Firefox 3.1b3
People
(Reporter: Natch, Assigned: mak)
Details
(Keywords: privacy, regression, verified1.9.1)
Attachments
(1 file, 1 obsolete file)
17.09 KB,
patch
|
dietrich
:
review+
beltzner
:
ui-review+
|
Details | Diff | Splinter Review |
History sidebar and Places->Show All History recently stopped showing the download history, regression-range:
Works: 10-27-2008,
Broken: 10-28-2008.
Looks like the places fsync stuff may have done that.
Reporter | ||
Updated•17 years ago
|
Flags: blocking-firefox3.1?
Comment 1•17 years ago
|
||
Just to comment on the new behavior, I think it's a welcome change. As now when users clear their download history either manually or thru CPD [Clear private data], they don't have to also purge their browsing history of these files as well. Unless the Download manager db already maintains a link between its records and ones in the Places db, and when cleared by either method, removes them from both dbs?
I don't know if we're going to go down the 'we can add a pref to turn this behavior off' road but I think most would agree download history belongs only in the download manager.
Reporter | ||
Comment 2•17 years ago
|
||
Noah see bug 431286 about the download db clearing, clearing history clears downloads, clearing downloads doesn't clear it from history.
Assignee | ||
Comment 3•17 years ago
|
||
i think that's wanted, see bug 412217
download history should not be mixed up with browsing history
Reporter | ||
Comment 4•17 years ago
|
||
(In reply to comment #3)
huh? bug 412217 comment 10 (afaict) is saying that it should show up in places just not in the awesomebar, and this is what has been happening pre-3.1beta2. Also see bug 431286 comment 10 that this was unintended. Also this would be really weird UI, that download history is dependent on browsing history (i.e. clearing browsing history clears downloads), but doesn't show up in the actual history. Finally from my testing it seems that the db is recording the downloads, just something is preventing it from actually showing up in places. If I use an October 28th build, make a few downloads, then with the same profile open an October 27th build, those downloads show up.
Assignee | ||
Comment 5•17 years ago
|
||
we should have a "downloads" container in the Library for them, and this is asked in other bugs (and requires a way to query based on transition type), mixing up download visits with user visits makes no sense imho.
Comment 6•17 years ago
|
||
Can someone actually boil this down to a use case so I can get a sense of what used to and is no longer happening?
We used to have history visits for the URI of a file download in the History root of the Library as well as in the Download manager?
Reporter | ||
Comment 7•17 years ago
|
||
The main reason I think this should block is the privacy issue when someone downloads, say something.wmv, then wants to get rid of it so he removes it from his downloads. He has no idea that it still exists in history (which if you'll open the same profile pre-October 28, it'll show up), namely because it _doesn't_ show up in _his_ history, even though it's in the history db! So 1) he/she effectively has now way of getting rid of a _single_ download, 2) he/she doesn't even no it's still there!
This is besides the confusion of ui, that deleting history will delete downloads even though the two are maintained separately, but I think the privacy issue is real.
Keywords: privacy
Reporter | ||
Comment 8•17 years ago
|
||
oh, and (in reply to comment #6)
yes they used to show up (since ff3, not before) in Places history as well as the download manager. see bug 431286
Assignee | ||
Comment 9•17 years ago
|
||
I agree with the privacy concern, but that requires directly reading of the db, so we would have privacy concerns for embed visits too, since them are not shown in the UI. hwv most likely that is caused by query rewriting using NOT IN (0,4,7) instead of NOT IN (0,4).
Reporter | ||
Comment 10•17 years ago
|
||
(In reply to comment #9)
IMHO this isn't a very good argument. Embed visits, while they may be revealing, aren't as accessible as downloads and they aren't a result of a clear action by the user. Furthermore, the downloads are being clearly recorded with ui in the download manager, when someone removes it from the only ui it exists in, he expects it to be completely removed. Finally, just opening the profile in a previous firefox/minefield brings up the download data, so no database reading tools are really necessary.
Comment 11•17 years ago
|
||
Regardless of the merits of the feature, we need to definitively understand why this is occurring, as it certainly is a regression from Fx3 behavior. Assigning to Marco to make sure we understand the cause of the problem.
That said, I agree that this feature could use re-evaluation. Marking ui-wanted and cc'ing Faaborg to get some analysis on the relevancy of this feature.
Marking blocking because we need an explicit decision for one way or the other.
Assignee: nobody → mak77
Flags: blocking-firefox3.1? → blocking-firefox3.1+
Keywords: uiwanted
OS: Windows Vista → All
Priority: -- → P2
Hardware: PC → All
Whiteboard: [needs discussion]
Target Milestone: --- → Firefox 3.1
Assignee | ||
Comment 12•17 years ago
|
||
as i said, we are filtering out (0,4,7) transition types and visit_count = 0, to show downloads we have to change that.
Attachment #347759 -
Flags: review?(dietrich)
Assignee | ||
Comment 13•17 years ago
|
||
Comment on attachment 347759 [details] [diff] [review]
patch + test
dietrich found a minor glitch, new patch coming
Attachment #347759 -
Attachment is obsolete: true
Attachment #347759 -
Flags: review?(dietrich)
Assignee | ||
Comment 14•17 years ago
|
||
Attachment #347970 -
Flags: review?(dietrich)
Updated•17 years ago
|
Attachment #347970 -
Flags: review?(dietrich) → review+
Comment 15•17 years ago
|
||
Comment on attachment 347970 [details] [diff] [review]
patch v1.1
r=me
Assignee | ||
Comment 16•17 years ago
|
||
ok so, do we want to take this? and if yes, for b2?
Updated•17 years ago
|
Attachment #347970 -
Flags: ui-review?(beltzner)
Comment 17•17 years ago
|
||
Comment on attachment 347970 [details] [diff] [review]
patch v1.1
requesting ui-review per c#16
This exposes downloads into the Places window (again; we shipped with this UI in 3.0)
Assignee | ||
Updated•17 years ago
|
Whiteboard: [needs discussion] → [needs UX team confirm]
Comment 18•17 years ago
|
||
Comment on attachment 347970 [details] [diff] [review]
patch v1.1
Yup, let's start by restoring the Firefox 3 behaviour. We can think more about whether or not they should be in their own section ("Downloads") at another time. I think there's already a bug on that.
Attachment #347970 -
Flags: ui-review?(beltzner) → ui-review+
Assignee | ||
Updated•17 years ago
|
Assignee | ||
Comment 19•17 years ago
|
||
pushed to trunk
http://hg.mozilla.org/mozilla-central/rev/cdcd973bd503
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•17 years ago
|
Flags: in-testsuite+
Assignee | ||
Comment 20•17 years ago
|
||
pushed to 1.9.1 branch:
http://hg.mozilla.org/releases/mozilla-1.9.1/rev/6fb6b8b38057
Keywords: fixed1.9.1
Target Milestone: Firefox 3.1 → Firefox 3.1b3
Comment 21•17 years ago
|
||
verified with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b3pre) Gecko/20090127 Shiretoko/3.1b3pre
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
You need to log in
before you can comment on or make changes to this bug.
Description
•