Bug 463863 - Download history not shown in Places history, r=dietrich, ui-r=beltzner